<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DADADA"
    android:padding="10dp"
    tools:context=".fragments.StandardCalFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer"
        app:layout_constraintVertical_bias="0.727">

        <Button
            android:id="@+id/buttonCe"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:text="@string/ce"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:text="@string/c"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/buttonCe"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/buttonD"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:src="@drawable/ic_back"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/buttonC"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button10"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click1"
            android:text="@string/division"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/buttonD"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button7"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCe" />

        <Button
            android:id="@+id/button8"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/buttonC" />

        <Button
            android:id="@+id/button9"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/buttonD" />

        <Button
            android:id="@+id/button11"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click1"
            android:text="@string/mul"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button4"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button5"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button6"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button12"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click1"
            android:text="@string/sub"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button1"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonInverse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button2"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button3"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button13"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click1"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/buttonInverse"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:text="@string/inverse"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <Button
            android:id="@+id/button0"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="click"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/buttonInverse"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/button0"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button14"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_equal_background"
            android:onClick="click1"
            android:text="@string/equal"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/buttonDot"
            app:layout_constraintTop_toBottomOf="@+id/button13" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="bottom|end"
        android:textColor="#616161"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="bottom|end"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

</androidx.constraintlayout.widget.ConstraintLayout>